add_executable(cpu_put cpu_put.cpp)
target_include_directories(cpu_put PRIVATE ${INCLUDE_PATH})
target_link_libraries(cpu_put PUBLIC MPI::MPI_CXX)
target_link_libraries(cpu_put PUBLIC DataSpaces::DataSpaces)

add_executable(cpu_get cpu_get.cpp)
target_include_directories(cpu_get PRIVATE ${INCLUDE_PATH})
target_link_libraries(cpu_get PUBLIC MPI::MPI_CXX)
target_link_libraries(cpu_get PUBLIC DataSpaces::DataSpaces)

add_executable(gpu_cpu_put gpu_cpu_put.cpp)
target_include_directories(gpu_cpu_put PRIVATE ${INCLUDE_PATH})
target_link_libraries(gpu_cpu_put PUBLIC MPI::MPI_CXX)
target_compile_options(gpu_cpu_put PUBLIC ${OpenACC_CXX_OPTIONS})
target_link_libraries(gpu_cpu_put PUBLIC ${OpenACC_CXX_OPTIONS})
target_link_libraries(gpu_cpu_put PUBLIC DataSpaces::DataSpaces)

add_executable(gpu_put gpu_put.cpp)
target_include_directories(gpu_put PRIVATE ${INCLUDE_PATH})
target_link_libraries(gpu_put PUBLIC MPI::MPI_CXX)
target_compile_options(gpu_put PUBLIC ${OpenACC_CXX_OPTIONS})
target_link_libraries(gpu_put PUBLIC ${OpenACC_CXX_OPTIONS})
target_link_libraries(gpu_put PUBLIC DataSpaces::DataSpaces)